--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,50 +1,61 @@
-body > header.theme-classic {
+body > header {
     position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--blue-dark);
     padding: 1rem 2rem;
     box-shadow: var(--box-shadow);
     width: 97vw;
     transition: all 1s;
     z-index: 10;
-    font-family: 'ubuntu';
 }
 
-.nav-header.theme-classic {
-    display: none;
+body > header img {
+    width: 30px;
 }
 
-.logo.theme-classic a{
-    color: var(--light);
+.logo a {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
-header.theme-classic img {
-    width: 30px;
+.nav-header {
+    display: none;
 }
 
-ul.theme-classic {
+ul {
     list-style: none;
     display: flex;
     gap: 1rem;
+    padding: 0;
+    margin: 0;
 }
 
-a.theme-classic {
-    color: var(--light)
+a {
+    text-decoration: none;
 }
 
-.icones.theme-classic {
+.icones {
     display: flex;
     gap: 1rem;
+    align-items: center;
 }
 
-i.theme-classic {
+i {
     font-size: 1.2rem;
-    color: var(--light)
+}
+
+
+body.theme-classic > header {
+    background-color: var(--blue-dark);
+    font-family: 'ubuntu';
+}
+
+.logo.theme-classic a,
+a.theme-classic,
+i.theme-classic {
+    color: var(--light);
 }
 
 .nav-mobile.theme-classic {
@@ -58,85 +69,33 @@ i.theme-classic {
 }
 
 
-
-@media screen and (min-width: 768px) {
-    .nav-header.theme-classic {
-        display: inline-block;
-    }
-
-    .menu-mobile.theme-classic {
-        display: none;
-    }
-}
-
-
-
 body.theme-color > header {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
     align-items: flex-start;
     padding: 2rem 2rem;
-    width: 97vw;
     background-image: url(../img/header-color.png);
+    box-shadow: none;
     background-size: 100% 100%;
     height: 150px;
     transition: all 0.1s;
-    z-index: 10;
     font-family: 'playwrite';
 }
 
-.minimized.theme-color {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+body.theme-color > header.minimized {
     padding: 0.8rem 2rem;
-    width: 97vw;
     background-image: none;
     height: 40px;
     background-color: var(--bg-color);
     box-shadow: var(--box-shadow);
 }
 
-.nav-header.theme-color {
-    display: none;
-}
-
-.logo.theme-color a{
+.logo.theme-color a,
+a.theme-color,
+i.theme-color {
     color: var(--text-light);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-header.theme-color p, .nav-header.theme-color ul {
-    margin: 0;
-}
-
-header.theme-color img {
-    width: 30px;
-}
-
-ul.theme-color {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-}
-
-a.theme-color {
-    color: var(--text-light)
 }
 
 .icones.theme-color {
-    display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-i.theme-color {
-    font-size: 1.2rem;
-    color: var(--text-light)
 }
 
 .nav-mobile.theme-color {
@@ -150,71 +109,22 @@ i.theme-color {
 }
 
 
-@media screen and (min-width: 768px) {
-    .nav-header.theme-color {
-        display: inline-block;
-    }
-
-    .menu-mobile.theme-color {
-        display: none;
-    }
-}
-
-
-
 body.theme-dark > header {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: var(--dark-blue);
     padding: 1rem;
-    box-shadow: var(--box-shadow);
-    transition: all 1s;
-    font-family: 'michroma';
     width: 92%;
     z-index: 3;
+    font-family: 'michroma';
 }
 
-.logo.theme-dark a {
-    color: var(--text-light);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-body.theme-dark > header img {
-    width: 30px;
-}
-
-.nav-header.theme-dark {
-    display: none;
-}
-
-ul.theme-dark {
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.contact-nav.theme-dark {
-    display: none;
-}
-
-ul.theme-dark li a {
-    color: var(--text-light)
-}
-
-.icones.theme-dark {
-    display: flex;
-    gap: 0.5rem;
-}
-
+.logo.theme-dark a,
+a.theme-dark,
 i.theme-dark {
-    font-size: 1.2rem;
-    color: var(--text-light)
+    color: var(--text-light);
+}
+
+.ul.theme-dark {
+    flex-direction: column;
 }
 
 .nav-mobile.theme-dark {
@@ -228,6 +138,16 @@ i.theme-dark {
 }
 
 
+@media screen and (min-width: 768px) {
+    .nav-header {
+        display: inline-block;
+    }
+
+    .menu-mobile {
+        display: none;
+    }
+}
+
 
 @media screen and (min-width: 768px) {
     body.theme-dark > header {
@@ -237,18 +157,8 @@ i.theme-dark {
         flex-direction: column;
         gap: 5rem;
         padding: 2rem 1rem;
-        transition: all 1s;
         width: fit-content;
         justify-content: flex-start;
-    }
-
-    .nav-header.theme-dark {
-        display: none;
-        order: 2;
-    }
-
-    .menu-mobile.theme-dark {
-        display: none;
     }
 
     .logo.theme-dark {
@@ -261,5 +171,10 @@ i.theme-dark {
 
     .logo.theme-dark a {
         flex-direction: column;
+    }
+
+    .nav-header.theme-dark {
+        display: none;
+        order: 2;
     }
 }
