--- a/src/assets/css/section-hero.css
+++ b/src/assets/css/section-hero.css
@@ -1,25 +1,25 @@
-.section-hero.theme-classic {
+.section-hero {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    background-color: var(--light);
     border-radius: 20px;
     box-shadow: var(--box-shadow);
-    padding: 2rem;
 }
 
-h1.theme-classic {
-    font-family: 'ubuntu';
-}
-
-.banner__left.theme-classic {
-    padding: 2rem;
-    order: 2;
+.banner__left {
     display: flex;
     justify-content: center;
+    position: relative;
+    padding: 2rem;
 }
 
-.banner__content.theme-classic {
+.banner__right {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+}
+
+.banner__content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,68 +27,56 @@ h1.theme-classic {
     max-width: 650px;
 }
 
-.banner__right.theme-classic {
-    order: 1;
-    display: flex;
-    position: relative;
-}
-
-.img__banner.theme-classic {
+.img__banner, .img__banner-2 {
     display: flex;
     justify-content: flex-end;
     max-width: min(400px, 100%);
-    width: 100%;
     height: auto;
 }
 
-.img__banner-2.theme-classic {
-    display: flex;
-    justify-content: flex-end;
-    max-width: min(400px, 100%);
-    width: 100%;
-    height: auto;
-    border-radius: 50px;
+.img__banner-2 {
     position: absolute;
-    top: 0;
+    bottom: 0;
     right: 0;
 }
 
 
-
 @media screen and (min-width: 768px) {
-    .section-hero.theme-classic {
+    .section-hero {
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .banner__left.theme-classic {
-        order: 1;
+    .banner__left, .banner__right {
+        padding-top: 1rem;
         align-items: center;
         width: 50%;
     }
 
-    .banner__right.theme-classic {
-        order: 2;
-            align-items: center;
-            justify-content: flex-end;
-            width: 50%;
-    }
-
-    .img__banner.theme-classic {
+    .img__banner {
         min-width: 300px;
-        transition: all 2s;
+        transition: all 0.5s;
+        
     }
 }
 
 
+.section-hero.theme-classic {
+    background-color: var(--light);
+}
+
+h1.theme-classic {
+    font-family: 'ubuntu';
+}
+
+.img__banner-2.theme-classic {
+    border-radius: 50px;
+}
+
 
 .section-hero.theme-color {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
     background-color: var(--violet);
     border-radius: 50px;
-    box-shadow: var(--box-shadow);
     color: var(--text-light);
 }
 
@@ -96,78 +84,13 @@ h1.theme-color {
     font-family: 'playwrite';
 }
 
-.banner__left.theme-color {
-    padding: 2rem;
-    order: 2;
-    display: flex;
-    justify-content: center;
-}
-
-.banner__content.theme-color {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    max-width: 650px;
-}
-
-.banner__right.theme-color {
-    order: 1;
-    display: flex;
-    position: relative;
-}
-
-.img__banner.theme-color {
-    display: flex;
-    justify-content: flex-end;
-    max-width: min(400px, 100%);
+.img__banner.theme-color, .img__banner-2.theme-color {
+    border-radius: 50px;
     width: 100%;
-    height: auto;
-    border-radius: 50px;
 }
-
-.img__banner-2.theme-color {
-    display: flex;
-    justify-content: flex-end;
-    height: 100%;
-    border-radius: 50px;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-
-
-@media screen and (min-width: 768px) {
-    .section-hero.theme-color {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .banner__left.theme-color {
-        order: 1;
-        align-items: center;
-        width: 50%;
-    }
-
-    .banner__right.theme-color {
-        order: 2;
-            align-items: center;
-            justify-content: flex-end;
-            width: 50%;
-    }
-
-    .img__banner.theme-color {
-        min-width: 300px;
-        transition: all 0.5s;
-    }
-}
-
 
 
 .section-hero.theme-dark {
-    display: flex;
-    flex-direction: column;
     gap: 2rem;
 }
 
@@ -176,61 +99,20 @@ h1.theme-dark {
     text-shadow: var(--text-shadow);
 }
 
-.banner__left.theme-dark {
-    padding: 2rem;
-    order: 2;
-    display: flex;
-    justify-content: center;
-}
-
-.banner__content.theme-dark {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    max-width: 650px;
-}
-
 .banner__right.theme-dark {
-    order: 1;
-    display: flex;
-    justify-content: center;
     padding: 3rem;
-    position: relative;
 }
 
 .img__banner.theme-dark, .img__banner-2.theme-dark {
     max-width: min(450px, 100%);
-    width: 100%;
-    height: auto;
     position: absolute;
     top: 0;
     left: 0;
 }
 
 
-
 @media screen and (min-width: 768px) {
-    .section-hero.theme-dark {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .banner__left.theme-dark {
-        order: 1;
-        align-items: center;
-        width: 50%;
-    }
-
     .banner__right.theme-dark {
-        order: 2;
-            align-items: center;
-            justify-content: flex-end;
-            width: 50%;
-    }
-
-    .img__banner.theme-dark {
-        min-width: 300px;
-        transition: all 0.5s;
+        justify-content: flex-end;
     }
 }
