--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -58,3 +58,10 @@
         transform: translateX(-100%);
     }
 }
+
+
+@media screen and (min-width: 1024px) {
+    .dialog[open]{
+        grid-template-columns: repeat(12,1fr);
+    }
+}
