--- a/src/assets/css/grid-projets.css
+++ b/src/assets/css/grid-projets.css
@@ -41,8 +41,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     transition: all 1s;
     color: var(--light);
+}
+
+/* .info-projet {
+    
+} */
+
+.btn-info {
+    margin: 1rem;
+}
+
+.card-title {
+    font-weight: bold;
+}
+
+.card-task {
+    font-size: 14px;
+}
+
+.card-date {
+    font-style: italic;
+    font-size: 14px;
 }
 
 .div-info.theme-classic:hover {
@@ -101,8 +123,8 @@
     align-items: center;
     border-radius: 50px;
     padding: 1rem;
-/*     background-image: url(../../img/motifs-couleurs.png);
-    background-size: 150%;
+/*     background-image: url(../img/motifs-couleurs.png);
+    background-size: 200%;
     background-position: -5px -5px; */
 }
 
@@ -110,11 +132,8 @@
     display: none;
 }
 
-.div-projet.theme-color:first-child {
-    background-position: -100px -25px;
-    .img-projet {
-        border-radius: 54% 46% 19% 81% / 51% 66% 34% 49% ;
-    }
+.div-projet.theme-color:first-child .img-projet {
+    border-radius: 54% 46% 19% 81% / 51% 66% 34% 49% ;
 }
 
 
