--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,6 +3,7 @@
 @import 'header.css';
 @import 'section-hero.css';
 @import 'grid-projets.css';
+@import 'modale-detail.css';
 @import 'footer.css';
 @import 'fonts.css';
 @import 'animation.css';
@@ -27,7 +28,8 @@
     --dark-blue: #030140;
     --medium-blue: #030A8C;
 
-    --box-shadow: 2px 6px 10px rgba(0, 0, 0, 0.3);
+    --box-shadow: 2px 6px 10px rgba(0, 0, 0, 0.2);
+    --box-glow: 2px 6px 10px rgba(255, 255, 255, 0.3);
 }
 
 .hidden {
