--- a/src/assets/css/body.css
+++ b/src/assets/css/body.css
@@ -16,6 +16,7 @@ main {
     padding: 2rem;
 }
 
+/* ----------------THEME CLASSIC--------------- */
 
 body.theme-classic {
     align-items: center;
@@ -28,6 +29,7 @@ main.theme-classic {
     margin-top: 10rem;
 }
 
+/* ----------------THEME COLOR--------------- */
 
 body.theme-color {
     align-items: center;
@@ -48,9 +50,12 @@ main.theme-color {
 }
 
 
+/* ----------------THEME DARK--------------- */
+
 body.theme-dark {
     background-color: var(--dark);
-    background-image: url(../../img/fond-dark.png);
+    background-image: url(../img/fond-dark.png);
+    background-attachment: fixed;
     background-size: 100%;
     color: var(--text-light);
 }
@@ -58,6 +63,7 @@ body.theme-dark {
 main.theme-dark {
     margin-top: 5rem;
 }
+
 
 @media screen and (min-width: 768px) {
 
