--- a/src/assets/css/grid-projets.css
+++ b/src/assets/css/grid-projets.css
@@ -1,9 +1,9 @@
 /* --------------------ALL THEMES--------------------- */
 .filters {
     display: flex;
-    width: 100%;
-    justify-content: space-between;
-    padding: 1rem 0 2rem;
+    flex-direction: column;
+    gap: 1rem;
+    padding-bottom: 1rem;
 }
 
 .checkbox-wrapper {
@@ -24,15 +24,30 @@
     border: 1px solid var(--dark);
 }
 
-.checkbox-wrapper:has(.checkbox-filter:checked)::after {
-    background-color: pink;
-}
-
 .checkbox-filter {
     opacity: 0;
     width: 16px;
     height: 16px;
     z-index: 3;
+    position: absolute;
+    right: 0;
+}
+
+@media screen and (min-width: 768px) {
+    .filters {
+        width: 100%;
+        justify-content: space-between;
+        padding: 1rem 0 2rem;
+        flex-direction: row;
+    }
+
+    .checkbox-filter {
+        opacity: 0;
+        width: 16px;
+        height: 16px;
+        z-index: 3;
+        position: relative;
+    }
 }
 
 /* --------------------THEME CLASSIC-------------------*/
@@ -157,9 +172,6 @@
     align-items: center;
     border-radius: 50px;
     padding: 1rem;
-/*     background-image: url(../img/motifs-couleurs.png);
-    background-size: 200%;
-    background-position: -5px -5px; */
 }
 
 .slider__btn--previous.theme-color, .slider__btn--next.theme-color {
@@ -231,8 +243,6 @@
 
 .div-info.theme-color {
     width: 100%;
-/*     background-color: rgba(255, 255, 255, 0.658);
-    border-radius: 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -337,12 +347,6 @@
 }
 
 
-@media screen and (min-width: 768px) {
-    .div-projet.theme-dark {
-        min-width: 300px;
-    }
-}
-
 @media screen and (min-width:650px) {
 
     .projets-grid.theme-classic {
@@ -351,6 +355,10 @@
 }
 
 @media screen and (min-width:768px) {
+
+    .div-projet.theme-dark {
+        min-width: 300px;
+    }
 
     .projets-grid.theme-classic {
         grid-template-columns: repeat(3,1fr);
