--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -2,7 +2,6 @@ body > header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
     box-shadow: var(--box-shadow);
     width: 97vw;
     transition: all 1s;
@@ -51,12 +50,15 @@ i {
     font-size: 1.2rem;
 }
 
+/* ----------------THEME CLASSIC----------------- */
+
 
 body.theme-classic > header {
+    width: 97%;
+    padding: 1rem 2rem;
     position: fixed;
     background-color: var(--blue-dark);
     font-family: 'ubuntu';
-    height: 80px;
 }
 
 .logo.theme-classic a,
@@ -75,15 +77,23 @@ i.theme-classic {
     color: var(--text-dark);
 }
 
+@media screen and(min-width: 768px) {
+    body.theme-classic > header {
+        height: 80px;
+    }
+}
+
+/* ----------------THEME COLOR----------------- */
+
 
 body.theme-color > header {
     position: fixed;
     align-items: flex-start;
-    padding: 2rem 2rem;
+    padding: 1rem;
     background-image: url(../img/header-color.png);
     box-shadow: none;
     background-size: 100% 100%;
-    height: 150px;
+    height: 100px;
     transition: all 0.1s;
     font-family: 'playwrite';
 }
@@ -117,15 +127,22 @@ i.theme-color {
     color: var(--text-dark);
 }
 
+@media screen and (min-width:768px) {
+    body.theme-color > header {
+        height: 150px;
+        padding: 2rem 2rem;
+    }
+}
+
+
+/* ----------------THEME DARK----------------- */
 
 body.theme-dark > header {
+    padding: 1rem 0.5rem;
+    position: fixed;
     background-color: var(--dark-blue);
-    padding: 1rem;
-    width: 92%;
     z-index: 3;
     font-family: 'michroma';
-    display: flex;
-    flex-direction: column;
 }
 
 .logo.theme-dark a,
@@ -149,10 +166,7 @@ i.theme-dark {
 }
 
 .footer-theme-dark {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    font-family: 'michroma';
+    display: none;
 }
 
 .footer-theme-dark .contact {
@@ -162,33 +176,33 @@ i.theme-dark {
 
 
 @media screen and (min-width: 768px) {
-    .nav-header {
-        display: inline-block;
-    }
-
-    .menu-mobile {
-        display: none;
-    }
-}
-
-
-@media screen and (min-width: 768px) {
     body.theme-dark > header {
         position: fixed;
+        display: flex;
+        flex-direction: column;
         top: 0;
         right: 0;
         height: 100vh;
+        width: 92%;
         grid-column: 11 / 13;
         display: grid;
         grid-template-rows: repeat(12,1fr);
-        padding: 1rem 1rem;
+        padding: 1rem;
         width: fit-content;
     }
 
-    .footer-theme-dark {
-        grid-row: 11/12;
+    .nav-header {
+        grid-row-start: 4;
+        display: flex;
+        justify-content: flex-end;
     }
 
+    .nav-header.theme-dark ul {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+    }
+    
     .logo.theme-dark {
         grid-row: 2/3;
     }
@@ -202,7 +216,20 @@ i.theme-dark {
         flex-direction: column;
     }
 
-    .nav-header.theme-dark {
+    .menu-mobile {
         display: none;
+    }
+
+    .footer-theme-dark {
+        grid-row: 11/12;
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        font-family: 'michroma';
+    }
+
+    .footer-theme-dark .contact {
+        display: flex;
+        gap: 0.5rem;
     }
 }
