--- a/src/assets/css/section-hero.css
+++ b/src/assets/css/section-hero.css
@@ -54,12 +54,14 @@
     }
 
     .img__banner {
+        width: 100%;
         min-width: 300px;
         transition: all 0.5s;
         
     }
 }
 
+/* ----------------THEME CLASSIC--------------- */
 
 .section-hero.theme-classic {
     background-color: var(--light);
@@ -74,6 +76,8 @@ h1.theme-classic {
 }
 
 
+/* ----------------THEME COLOR--------------- */
+
 .section-hero.theme-color {
     background-color: var(--violet);
     border-radius: 50px;
@@ -86,12 +90,14 @@ h1.theme-color {
 
 .img__banner.theme-color, .img__banner-2.theme-color {
     border-radius: 50px;
-    width: 100%;
+    width: 80%;
 }
 
 
+/* ----------------THEME DARK--------------- */
+
 .section-hero.theme-dark {
-    gap: 2rem;
+    gap: 0;
 }
 
 h1.theme-dark {
@@ -100,19 +106,29 @@ h1.theme-dark {
 }
 
 .banner__right.theme-dark {
-    padding: 3rem;
+    padding: 1rem;
 }
 
 .img__banner.theme-dark, .img__banner-2.theme-dark {
-    max-width: min(450px, 100%);
-    position: absolute;
-    top: 0;
-    left: 0;
+    max-width: min(250px, 100%);
 }
 
 
 @media screen and (min-width: 768px) {
+
+    .section-hero.theme-dark {
+        gap: 2rem;
+    }
+
     .banner__right.theme-dark {
         justify-content: flex-end;
+        padding: 3rem;
+    }
+
+    .img__banner.theme-dark, .img__banner-2.theme-dark {
+        max-width: min(450px, 100%);
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 }
