--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -10,6 +10,8 @@
     padding: 0.5rem 1rem;
     gap: 0.5rem;
     font-weight: 900;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+    transition: all 0.5s;
 }
 
 
