--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -186,12 +186,11 @@ i.theme-dark {
         top: 0;
         right: 0;
         height: 100vh;
-        width: 92%;
-        grid-column: 11 / 13;
+        grid-column: 12 / 13;
         display: grid;
         grid-template-rows: repeat(12,1fr);
         padding: 1rem;
-        width: fit-content;
+        width: 10%;
     }
 
     .nav-header {
@@ -208,6 +207,7 @@ i.theme-dark {
     
     .logo.theme-dark {
         grid-row: 2/3;
+        text-align: right;
     }
 
     .icones.theme-dark {
@@ -226,8 +226,8 @@ i.theme-dark {
     .footer-theme-dark {
         grid-row: 11/12;
         display: flex;
-        align-items: center;
-        gap: 2rem;
+        flex-direction: column;
+        align-items: flex-end;
         font-family: 'michroma';
     }
 
