--- a/src/assets/css/modale-detail.css
+++ b/src/assets/css/modale-detail.css
@@ -2,19 +2,24 @@
     background-color: var(--light);
     box-shadow: var(--box-shadow);
     height: 75%;
+    grid-column: 1/5;
+    margin: 2rem;
     align-self: center;
-    max-height: 800px;
     border-radius: 20px;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.dialog-details-projets.theme-dark {
-    background-color: var(--dark);
-    border: 2px solid var(--light);
-    border-radius: 0;
+.project-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-modale-projet {
+    max-width: 60%;
 }
 
 .btn-close {
@@ -27,6 +32,11 @@
     justify-content: space-between;
 }
 
+.img-modale-projet.theme-classic {
+    border: 1px solid var(--dark);
+    border-radius: 20px;
+}
+
 .dialog-details-projets.theme-classic a, .dialog-details-projets.theme-color a {
     color: var(--dark);
     border-bottom: 1px solid var(--none);
@@ -35,6 +45,11 @@
 
 .dialog-details-projets.theme-classic a:hover, .dialog-details-projets.theme-color a:hover {
     border-bottom: 1px solid var(--dark);
+}
+
+.img-modale-projet.theme-color {
+    border: 1px solid var(--dark);
+    border-radius: 50px;
 }
 
 .theme-dark a {
@@ -47,9 +62,23 @@
     border-bottom: 1px solid var(--light);
 }
 
+.dialog-details-projets.theme-dark {
+    background-color: var(--dark);
+    border: 2px solid var(--light);
+    border-radius: 0;
+}
 
-@media screen and (min-width: 1024px) {
+.img-modale-projet.theme-dark {
+    border: 1px solid var(--light);
+    border-radius: 0px;
+}
+
+
+@media screen and (min-width: 768px){
     .dialog-details-projets {
-        grid-column: 4 / 10;
+        max-height: 800px;
+        padding: 2rem;
+        grid-column: 3 / 11;
+        margin: 0;
     }
 }
