--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -142,10 +142,13 @@ i.theme-color {
 body.theme-dark > header {
     padding: 1rem 0.5rem;
     position: fixed;
-    background-color: var(--dark-blue);
+    background-color: rgba(255, 255, 255, 0.04);
     z-index: 3;
+}
+
+.logo.theme-dark {
     font-family: 'michroma';
-    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 1);
+    padding-bottom: 0.5rem;
 }
 
 .logo.theme-dark a,
