--- a/src/assets/css/grid-projets.css
+++ b/src/assets/css/grid-projets.css
@@ -304,7 +304,7 @@
 .div-projet.theme-dark {
     display: flex;
     flex-direction: column;
-    border: 2px solid var(--medium-blue);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     scroll-snap-align: start;
     min-width: 200px;
     background-color: var(--dark);
@@ -332,16 +332,16 @@
 }
 
 .progress.theme-dark {
-    background-color: var(--grey);
-    border: 1px solid var(--medium-blue);
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.2);
     width: 100%;
-    height: 20px;
+    height: 6px;
     border-radius: 50px;
 }
 
 .progress__bar.theme-dark {
-    background-color: var(--medium-blue);
-    height: 20px;
+    background-color: var(--dark-violet);
+    height: 6px;
     border-radius: 50px;
     transition: width 0.3s ease-in-out;
 }
