--- a/src/assets/css/body.css
+++ b/src/assets/css/body.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 0;
     font-family: 'montserrat';
     font-weight: 600;
@@ -12,9 +13,9 @@ main {
     max-width: 1440px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     gap: 3rem;
-    padding: 2rem;
+    padding: 2rem 0;
 }
 
 .wrapper {
@@ -22,6 +23,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 4rem;
+    padding: 2rem;
 }
 
 /* ----------------THEME CLASSIC--------------- */
@@ -53,15 +55,20 @@ body.theme-color {
 main.theme-color {
     margin-top: 12rem;
     background-color: var(--light);
-    padding: 3rem;
     border-radius: 50px;
     box-shadow: var(--box-shadow);
 }
 
+@media screen and (min-width: 768px) {
+    main.theme-color {
+        padding: 3rem;
+    }
+}
 
 /* ----------------THEME DARK--------------- */
 
 body.theme-dark {
+    display: block;
     background-color: var(--dark);
     background-image: url(../img/fond-dark.png);
     background-attachment: fixed;
