--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -19,7 +19,7 @@ footer.theme-color {
 }
 
 footer.theme-dark {
-    display: none;
+    background-color: rgba(255, 255, 255, 0.04);
 }
 
 .contact {
@@ -42,14 +42,8 @@ footer.theme-dark {
 
 
 @media screen and (min-width: 768px) {
+
     footer.theme-dark {
-        padding: 3rem;
-        grid-column: 1/2;
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        z-index: 10;
-        flex-direction: column;
-        max-width: fit-content;
+        display: none;
     }
 }
