--- a/src/assets/css/grid-projets.css
+++ b/src/assets/css/grid-projets.css
@@ -52,6 +52,10 @@
 
 /* --------------------THEME CLASSIC-------------------*/
 
+.mes-projets.theme-classic {
+    padding: 2rem;
+}
+
 .theme-classic.checkbox-wrapper::after {
     border-radius: 6px;
 }
@@ -179,60 +183,129 @@
 }
 
 .div-projet.theme-color:first-child .img-projet {
-    border-radius: 54% 46% 19% 81% / 51% 66% 34% 49% ;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+	box-shadow: 15px 15px 50px rgba(0,0,0,0.2);
 }
 
+.div-projet.theme-color:first-child .img-projet:hover {
+    animation: morphing1 10s infinite;
+}
 
 .div-projet.theme-color:nth-child(2) .img-projet {
-    border-radius: 54% 46% 71% 29% / 63% 37% 63% 37% ;
+    border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(2) .img-projet:hover {
+    animation: morphing2 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(3) .img-projet {
-    border-radius: 39% 61% 66% 34% / 55% 44% 56% 45%;
+    border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(3) .img-projet:hover {
+    animation: morphing3 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(4) .img-projet {
-    border-radius: 25% 75% 46% 54% / 31% 57% 43% 69% ;
+    border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(4) .img-projet:hover {
+    animation: morphing4 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(5) .img-projet {
-    border-radius: 39% 61% 66% 34% / 55% 44% 56% 45%;
+    border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(5) .img-projet:hover {
+    animation: morphing2 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(6) .img-projet {
-    border-radius: 29% 71% 33% 67% / 67% 50% 50% 33% ;
+    border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(6) .img-projet:hover {
+    animation: morphing3 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(7) .img-projet {
-    border-radius: 54% 46% 71% 29% / 63% 37% 63% 37% ;
+    border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(7) .img-projet:hover {
+    animation: morphing4 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(8) .img-projet {
-    border-radius: 54% 46% 19% 81% / 51% 66% 34% 49% ;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(8) .img-projet:hover {
+    animation: morphing1 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(9) .img-projet {
-    border-radius: 25% 75% 46% 54% / 31% 57% 43% 69% ;
+    border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(9) .img-projet:hover {
+    animation: morphing3 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(10) .img-projet {
-    border-radius: 54% 46% 19% 81% / 51% 66% 34% 49% ;
+    border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(10) .img-projet:hover {
+    animation: morphing4 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(11) .img-projet {
-    border-radius: 39% 61% 66% 34% / 55% 44% 56% 45%;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(11) .img-projet:hover {
+    animation: morphing1 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(12) .img-projet {
-    border-radius: 47% 53% 65% 35% / 38% 41% 59% 62% ;
+    border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(12) .img-projet:hover {
+    animation: morphing2 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(13) .img-projet {
-    border-radius: 29% 71% 33% 67% / 67% 50% 50% 33%;
+    border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(13) .img-projet:hover {
+    animation: morphing4 10s infinite;
 }
 
 .div-projet.theme-color:nth-child(14) .img-projet {
-    border-radius: 25% 75% 46% 54% / 31% 57% 43% 69% ;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    box-shadow: 10px 10px 20px rgba(0,0,0,0.2);
+}
+
+.div-projet.theme-color:nth-child(14) .img-projet:hover {
+    animation: morphing1 10s infinite;
 }
 
 .img-projet.theme-color {
@@ -247,6 +320,74 @@
     flex-direction: column;
     align-items: center;
     order: 2;
+}
+
+@keyframes morphing1 {
+    0% {
+        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+        box-shadow: 10px 10px 20px rgba(0,0,0,0.2)
+    }
+    25% { 
+        border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    }
+    50% {
+        border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+        box-shadow: -10px -5px 20px rgba(0,0,0,0.2);
+    }
+    75% {
+        border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    }
+}
+
+@keyframes morphing2 {
+    0% { 
+        border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    }
+    25% {
+        border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+        box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+    }
+    50% {
+        border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    }
+    75% {
+        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+        box-shadow: 15px 15px 50px rgba(0,0,0,0.2)
+    }
+}
+
+@keyframes morphing3 {
+    0% {
+        border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+        box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+    }
+    25% {
+        border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    }
+    50% {
+        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+        box-shadow: 15px 15px 50px rgba(0,0,0,0.2)
+    }
+    75% { 
+        border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    }
+}
+
+@keyframes morphing4 {
+    0% {
+        border-radius: 33% 67% 58% 42% / 63% 68% 32% 37%;		
+    }
+    25% {
+        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+        box-shadow: 15px 15px 50px rgba(0,0,0,0.2)
+    }
+    50% { 
+        border-radius: 58% 42% 75% 25% / 76% 46% 54% 24%;
+    }
+    75% {
+        border-radius: 50% 50% 33% 67% / 55% 27% 73% 45%;
+        box-shadow: -10px -5px 50px rgba(0,0,0,0.2);
+    }
 }
 
 /* --------------------THEME DARK-------------------*/
