--- a/src/assets/css/body.css
+++ b/src/assets/css/body.css
@@ -6,7 +6,6 @@ body {
     font-family: 'montserrat';
     font-weight: 600;
     overflow-x: hidden;
-    transition: all 1s;
 }
 
 main {
@@ -37,6 +36,9 @@ body.theme-classic {
 
 main.theme-classic {
     max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* ----------------THEME COLOR--------------- */
