--- a/src/assets/css/apropos.css
+++ b/src/assets/css/apropos.css
@@ -86,6 +86,10 @@
   color: var(--text-dark);
 }
 
+.download-cv.theme-classic i {
+  color: var(--text-dark);
+}
+
 /* ----------------THEME COLOR----------------- */
 
 .a-propos.theme-color h2,
@@ -105,6 +109,11 @@
 
 .download-cv.theme-color {
   color: var(--text-dark);
+  border-bottom-color: transparent;
+}
+
+.download-cv.theme-color:hover {
+  border-bottom-color: var(--text-dark);
 }
 
 .download-cv.theme-color i {
