--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -34,12 +34,12 @@ ul {
 
 a {
   text-decoration: none;
-  border: 1px solid var(--none);
-  transition: all 0.5s;
+  border-bottom: 1px solid transparent;
+  transition: border-bottom-color 0.5s;
 }
 
 a:hover {
-  border-bottom: 1px solid var(--text-light);
+  border-bottom-color: var(--text-light);
 }
 
 .icones {
